--- a/client/app/data/l10n/en.json
+++ b/client/app/data/l10n/en.json
@@ -594,5 +594,6 @@
   "This email is to remind you the presence of unread or updated reports.": "This email is to remind you the presence of unread or updated reports.",
   "Reminder about unread or updated reports": "Reminder about unread or updated reports",
   "Role: {Role}": "Role: {Role}",
-  "Password: {Password}": "Password: {Password}"
+  "Password: {Password}": "Password: {Password}",
+  "Message created by paco": "Message created by Paco"
 }
