--- a/client/app/data/l10n/en.json
+++ b/client/app/data/l10n/en.json
@@ -595,5 +595,6 @@
   "Reminder about unread or updated reports": "Reminder about unread or updated reports",
   "Role: {Role}": "Role: {Role}",
   "Password: {Password}": "Password: {Password}",
-  "Message created by paco": "Message created by Paco"
+  "Message created by paco": "Message created by Paco",
+  "Monitoring": "Monitoring"
 }
