Quitar mensaje receipt de config

--- a/client/app/data/l10n/en.json
+++ b/client/app/data/l10n/en.json
@@ -596,5 +596,10 @@
   "Role: {Role}": "Role: {Role}",
   "Password: {Password}": "Password: {Password}",
   "Message created by paco": "Message created by Paco",
-  "Monitoring": "Monitoring"
+  "Monitoring": "Monitoring",
+  "Acceder a la comunicación.": "Acceder a la comunicación.",
+  "Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.":"Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.",
+  "Añadir ficheros o información adicional.": "Añadir ficheros o información adicional.",
+  "Conocer el estado de tramitación de la comunicación.": "Conocer el estado de tramitación de la comunicación.",
+  "El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.":"El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones."
 }
