--- a/client/app/data/l10n/eu.json
+++ b/client/app/data/l10n/eu.json
@@ -404,11 +404,11 @@
   "The two passwords do not match": "Las dos contraseñas introducidas no coinciden",
   "Validation of email address change in progress.": "El proceso de validación de la dirección de correo está en progreso.",
   "Please check your inbox for further instructions.": "Por favor, comprueba tu correo para más instrucciones.",
-  "Warning": "Advertencia",
-  "You are strongly advised to visit this site using the app called Tor Browser, that protects your identity.": "Te aconsejamos firmemente que visites este sitio usando la aplicación llamada Navegador Tor, que protege tu identidad.",
-  "Download the Tor Browser": "Descargar el Navegador Tor",
-  "Then, copy and paste the following address into the Tor Browser:": "Luego, copia y pega la siguiente dirección en el Navegador Tor:",
-  "Have you already filed a report? Enter your receipt.": "Si ya nos comunicaste una infracción, puedes conocer el estado del proceso introduciendo tu código de recepción.",
+  "Warning": "Abisua",
+  "You are strongly advised to visit this site using the app called Tor Browser, that protects your identity.": "Biziki gomendatzen dizugu gune hau bisitatzea zure nortasuna babesten duen Tor Browser izeneko aplikazioa erabiliz.",
+  "Download the Tor Browser": "Deskargatu Tor arakatzailea.",
+  "Then, copy and paste the following address into the Tor Browser:": "Ondoren, kopiatu eta itsatsi helbide hau Tor arakatzailean:",
+  "Have you already filed a report? Enter your receipt.": "Dagoeneko arau-hausteren bat jakinarazi badiguzu, prozesuaren egoera jakin dezakezu ordainagiria-kodea sartuta.",
   "The receipt is either invalid or the report has expired.": "El código es inválido o bien el reporte ha expirado",
   "Select a file or drag it here.": "Selecciona un archivo o arrástralo aquí ",
   "Size:": "Tamaño:",
@@ -599,7 +599,7 @@
   "Role: {Role}": "Rol: {Role}",
   "Password: {Password}": "Contraseña: {Password}",
   "Message created by paco": "Mensaje creado por Paco",
-  "Monitoring": "Seguimiento",
+  "Monitoring": "Segimendu",
   "Acceder a la comunicación.": "Acceder a la comunicación.",
   "Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.":"Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.",
   "Añadir ficheros o información adicional.": "Añadir ficheros o información adicional.",
