--- a/client/app/data/l10n/es.json
+++ b/client/app/data/l10n/es.json
@@ -600,6 +600,7 @@
   "Password: {Password}": "Contraseña: {Password}",
   "Message created by paco": "Mensaje creado por Paco",
   "Monitoring": "Seguimiento",
+  "Hay que conservar este código de dieciséis dígitos para:": "Hay que conservar este código de dieciséis dígitos para:",
   "Acceder a la comunicación.": "Acceder a la comunicación.",
   "Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.":"Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.",
   "Añadir ficheros o información adicional.": "Añadir ficheros o información adicional.",
