--- a/client/app/data/l10n/eu.json
+++ b/client/app/data/l10n/eu.json
@@ -17,11 +17,11 @@
   "Preferences": "Preferencias",
   "Notification settings": "Configuración de notificaciones",
   "file unavailable": "Archivo no disponible",
-  "Date": "Fecha",
-  "Expiration date": "Fecha de caducidad",
+  "Date": "Data",
+  "Expiration date": "Iraungitze-data",
   "Last Access": "Último acceso",
   "Files": "Archivos",
-  "Comments": "Comentarios",
+  "Comments": "Iruzkinak",
   "Messages": "Mensajes",
   "Details": "Detalles",
   "Platform wizard": "Asistente de la plataforma",
@@ -55,11 +55,11 @@
   "Yes": "Sí",
   "No": "No",
   "Attachment": "Adjunto",
-  "Attachments": "Adjuntos",
+  "Attachments": "Eranskinak",
   "Change your password": "Cambia tu contraseña",
   "User": "Usuario",
   "Motivation": "Motivo",
-  "Status": "Estado",
+  "Status": "Estatu",
   "Request motivation": "Motivo de la solicitud",
   "Reply motivation": "Motivo de la respuesta",
   "Request status": "Estado de la solicitud",
@@ -81,7 +81,7 @@
   "URL redirects": "Redirección URL",
   "Anomaly detection thresholds": "Umbrales de detección de anomalías",
   "Available disk space": "Espacio de almacenamiento disponible",
-  "Last update": "Última actualización",
+  "Last update": "Azken eguneratzea",
   "Disable notifications to administrators": "Deshabilitar notificaciones a los administradores",
   "Disable notifications to custodians": "Deshabilitar notificaciones a los custodios",
   "Disable notifications to recipients": "Deshabilitar notificaciones a los destinatarios",
@@ -129,8 +129,8 @@
   "Closed": "Cerrado",
   "Placeholder": "Marcador",
   "Print": "Imprimir",
-  "Previous": "Anterior",
-  "Next": "Siguiente",
+  "Previous": "Aurrekoa",
+  "Next": "Hurrengoa",
   "First": "Primera",
   "Last": "Última",
   "Send a test email to your email address.": "Enviar un correo de prueba a tu dirección de correo electrónico.",
@@ -144,7 +144,7 @@
   "This domain name is not available.": "Este nombre de dominio no está disponible.",
   "Mark as important": "Marcar como importante",
   "Copy to clipboard": "Copiar al portapapeles",
-  "Logout": "Cerrar sesión",
+  "Logout": "Saioa itxi",
   "Give this recipient ability to grant user access to reports": "Dar a este destinatario la facultad de conceder acceso de usuario a los informes",
   "Grant access": "Conceder acceso",
   "Revoke access": "Revocar acceso",
@@ -197,7 +197,7 @@
   "Substatuses": "Subestatuses",
   "Add": "Añadir",
   "Label": "Etiqueta",
-  "This field is mandatory": "Este campo es obligatorio",
+  "This field is mandatory": "Eremu hau derrigorrezkoa da",
   "Edit": "Editar",
   "Cancel": "Cancelar",
   "Report statuses": "Reportar estados",
@@ -210,7 +210,7 @@
   "Whistleblowing button": "Botón de aporte de información",
   "Disclaimer": "Descargo",
   "Footer": "Pie de página",
-  "Upload": "Subir",
+  "Upload": "Kargatu",
   "Download": "Descargar",
   "Language:": "Idioma:",
   "Add custom text": "Añadir texto personalizado",
@@ -265,7 +265,7 @@
   "Automatic configuration": "Configuración automática",
   "Using automatic HTTPS configuration will handle the entire process of requesting, enabling and renewing certificates from the Let's Encrypt Certificate Authority.": "Usar configuración automática de HTTPS manejará todo el proceso de petición, habilitación y renovación de certificados desde la Autoridad de Certificación de Let's Encrypt.",
   "The platform must be reachable through a public IP address and the selected hostname must have a DNS record referencing that address.": "La plataforma debe ser accesible a través de una dirección IP pública, y el nombre de equipo seleccionado debe tener un registro DNS correspondiente que referencie esa dirección.",
-  "Proceed": "Proceder",
+  "Proceed": "Jarraitu",
   "Manual configuration": "Configuración manual",
   "The manual configuration wizard will guide you through the setup of HTTPS from an alternative Certificate Authority.": "El asistente de configuración manual le guiará a través del establecimiento de HTTPS desde una Autoridad de Certificación (CA) alternativa.",
   "Disabled": "Deshabilitado",
@@ -370,7 +370,7 @@
   "Confirm": "Confirmar",
   "Assign score points": "Asignar puntos a la puntuación",
   "Are you sure?": "¿Estas seguro?",
-  "Close": "Cerrar",
+  "Close": "Itxi",
   "Please note that all the associated data will be permanently deleted.": "Por favor entiende que todos los datos asociados serán eliminados definitivamente.",
   "Enable two factor authentication": "Habilitar autentificación de doble factor",
   "Before proceeding please read carefully the documentation at:": "Antes de continuar, por favor lee cuidadosamente la documentación en:",
@@ -378,13 +378,13 @@
   "Make a copy and store it in a safe place. It will be necessary if you lose your password to recover the access to your account without data loss.": "Haz una copia y guárdala en un lugar seguro. Será necesaria, si pierdes tu contraseña, para poder recuperar el acceso a tu cuenta sin sufrir pérdida de datos.",
   "Enter a name for the copy": "Introduce un nombre para la copia",
   "Request support": "Solicitar ayuda",
-  "Thank you.": "¡Gracias!",
-  "We will try to get back to you as soon as possible.": "Conserva el código para realizar el seguimiento de la comunicación.",
-  "Submit": "Entregar",
+  "Thank you.": "Eskerrik asko!",
+  "We will try to get back to you as soon as possible.": "Mantendu kodea komunikazioaren jarraipena egiteko.",
+  "Submit": "Bidali",
   "The connection is not secure.": "La conexión no es segura.",
   "The platform is still not configured for HTTPS connections and should therefore only be used for testing purposes.": "La plataforma aún no está configurada para conexiones HTTPS y sólo se debe usar para propósitos de prueba.",
   "Please write a motivation for the reply": "Por favor, escribe un motivo para la respuesta",
-  "Send": "Enviar",
+  "Send": "Bidali",
   "By confirming, you will postpone the expiration date to:": "Al confirmar, pospondras la fecha de caducidad a:",
   "This is a demo platform, please do not use it for real submissions.": "Este es un buzón de demostración, por favor no lo uses para reportes reales. ",
   "Install an authenticator app on your phone": "Instalar una aplicación de autenticación en tu teléfono",
@@ -410,7 +410,7 @@
   "Then, copy and paste the following address into the Tor Browser:": "Ondoren, kopiatu eta itsatsi helbide hau Tor arakatzailean:",
   "Have you already filed a report? Enter your receipt.": "Dagoeneko arau-hausteren bat jakinarazi badiguzu, prozesuaren egoera jakin dezakezu ordainagiria-kodea sartuta.",
   "The receipt is either invalid or the report has expired.": "El código es inválido o bien el reporte ha expirado",
-  "Select a file or drag it here.": "Selecciona un archivo o arrástralo aquí ",
+  "Select a file or drag it here.": "Hautatu fitxategi bat edo jaregin hemen",
   "Size:": "Tamaño:",
   "Uploading files…": "Subiendo archivos...",
   "Upload completed successfully!": "¡Subida completada con éxito!",
@@ -422,9 +422,9 @@
   "Filename": "Nombre del archivo",
   "Upload date": "Fecha de subida",
   "File size": "Tamaño del archivo",
-  "Questionnaire answers": "Respuestas al cuestionario",
+  "Questionnaire answers": "Galdetegiaren erantzunak",
   "Step": "Paso",
-  "Status:": "Estado:",
+  "Status:": "Estatu:",
   "Files attached by recipients": "Archivos adjuntados por los destinatarios",
   "Upload a file:": "Subir un archivo:",
   "Welcome!": "¡Bienvenido!",
@@ -459,16 +459,16 @@
   "Fiscal code": "Código fiscal",
   "Tax code": "Código de impuestos",
   "The answer is too short": "La respuesta es demasiado corta",
-  "The specified input is not valid.": "La entrada especificada no es válida.",
-  "The specified input is not valid:": "La entrada especificada no es válida:",
-  "please enter a valid email address.": "por favor, ingresa una dirección de correo electrónico válida.",
+  "The specified input is not valid.": "Zehaztutako sarrera ez da baliozkoa.",
+  "The specified input is not valid:": "Zehaztutako sarrera ez da baliozkoa:",
+  "please enter a valid email address.": "idatzi baliozko helbide elektroniko bat.",
   "please enter numbers only.": "por favor, ingresa únicamente números.",
   "Submissions disabled": "Reportes deshabilitados.",
   "You are connecting to the server without anonymity and this server supports only anonymous submissions": "Te estas conectando al servidor de forma no anónima y este nodo sólo soporta reportes anónimos",
-  "Your report was successful.": "La información se ha recibido correctamente.",
-  "Remember your receipt for this report.": "El código para este envío es:",
+  "Your report was successful.": "Informazioa behar bezala jaso da.",
+  "Remember your receipt for this report.": "Bidalketa honen kodea hau da:",
   "Use the 16 digit receipt to log in. It will allow you to view any messages we sent you, and also to add extra info.": "Usar el recibo de 16 dígitos para iniciar sesión. Te permitirá ver cualquier mensaje que hayamos enviado, y también añadir información extra.",
-  "View your report": "Acceder a la comunicación",
+  "View your report": "Sarbide komunikazioa",
   "Recipient selection": "Selección de destinatario",
   "Select the recipients of your report:": "Selecciona los destinatarios de tu reporte:",
   "Recipients selected:": "Destinatarios seleccionados:",
@@ -549,13 +549,13 @@
   "If you didn't request this change, change your password and contact your system administrator.": "Si no has solicitado este cambio, cambia tu contraseña y contacta con el Administrador del sistema.",
   "Email change request": "Solicitud de cambio de dirección de correo",
   "From: {Author}": "De: {Author}",
-  "Date: {EventTime}": "Fecha: {EventTime}",
+  "Date: {EventTime}": "Data: {EventTime}",
   "From: Whistleblower": "De: Informante",
-  "Date: {SubmissionDate}": "Fecha: {SubmissionDate}",
+  "Date: {SubmissionDate}": "Data: {SubmissionDate}",
   "Label: {TipLabel}": "Etiqueta: {TipLabel}",
-  "Status: {TipStatus}": "Estado: {TipStatus}",
+  "Status: {TipStatus}": "Estatu: {TipStatus}",
   "The HTTPS certificate loaded on the platform is about to, or has already expired.": "El certificado HTTPS cargado en la plataforma está caducando o ya lo ha hecho.",
-  "Expiration date: {ExpirationDate}": "Fecha de caducidad: {ExpirationDate}",
+  "Expiration date: {ExpirationDate}": "Iraungitze-data: {ExpirationDate}",
   "Without a valid certificate, the platform will be accessible in a secure way only via Tor.": "Sin un certificado válido, la plataforma sólo será accesible de forma segura vía Tor.",
   "Log in to solve the issue.": "Inicia sesión para solucionar el problema.",
   "Expiration alert for HTTPS certificate": "Alerta de caducidad para el certificado HTTPS",
@@ -600,10 +600,11 @@
   "Password: {Password}": "Contraseña: {Password}",
   "Message created by paco": "Mensaje creado por Paco",
   "Monitoring": "Segimendu",
-  "Acceder a la comunicación.": "Acceder a la comunicación.",
-  "Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.":"Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.",
-  "Añadir ficheros o información adicional.": "Añadir ficheros o información adicional.",
-  "Conocer el estado de tramitación de la comunicación.": "Conocer el estado de tramitación de la comunicación.",
-  "El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.":"El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones."
+  "Hay que conservar este código de dieciséis dígitos para:": "Hamasei zifrako kode hau gorde behar duzu:",
+  "Acceder a la comunicación.": "Sarbide Komunikazioa.",
+  "Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.":"Postontziaren kudeaketa-organoarekin eta egiaztatu jasotako mezuak komunikatzea.",
+  "Añadir ficheros o información adicional.": "Fitxategiak edo informazio gehigarria gehitzea.",
+  "Conocer el estado de tramitación de la comunicación.": "Komunikazio prozesuaren egoera ezagutzea.",
+  "El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.":"Postontzien kudeaketa-organoak kanal seguru hori erabiliko du lehentasunez, eta komunikazioen anonimotasuna eta konfidentzialtasuna bermatuko ditu."
 
 }
