--- a/client/app/data/l10n/eu.json
+++ b/client/app/data/l10n/eu.json
@@ -1,5 +1,5 @@
 {
-  "Log in": "Iniciar sesión",
+  "Log in": "Saioa hasi",
   "Main configuration": "Configuración principal",
   "Theme customization": "Personalización del tema",
   "Languages": "Idiomas",
